<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="btn_continue">Continue</string>
  <string name="btn_got_it">Got it</string>
  <string name="btn_turn_on">Turn on</string>
  <string name="btn_turn_off">Turn off</string>
  <string name="btn_not_now">Not now</string>
  <string name="btn_cancel">Cancel</string>
  <string name="btn_delete_status">Delete status</string>
  <string name="btn_delete">Delete</string>
  <string name="btn_no_go_back">No, go back</string>
  <string name="btn_yes_continue">Yes, continue</string>
  <string name="btn_share_positive">Share COVID-19 test result</string>
  <string name="btn_done">Done</string>
  <string name="btn_previous">Previous</string>
  <string name="btn_verify">Verify</string>
  <string name="btn_no_thanks">No thanks</string>
  <string name="btn_share">Share</string>
  <string name="btn_close_app">Close app</string>
  <string name="learn_more">Learn more</string>
  <string name="home_tab_settings_text">Settings</string>
  <string name="notification_channel_name">Possible COVID-19 exposure</string>
  <string name="notification_channel_description">Get notifications if you were possibly exposed to someone with COVID-19.</string>
  <string name="navigate_up">Go back to previous screen</string>
  <string name="btn_close_label">Close</string>
  <string name="updated_permission_disabled_notification_title">Unable to check for exposures</string>
  <string name="updated_bluetooth_location_state_notification">To continue checking for possible exposure, turn on Bluetooth and device location setting</string>
  <string name="updated_bluetooth_state_notification">To continue checking for possible exposure, turn on Bluetooth.</string>
  <string name="updated_location_state_notification">To continue checking for possible exposure, turn on device location setting</string>
  <string name="onboarding_opt_in_title">Permissions needed to enable Exposure Notifications</string>
  <string name="onboarding_finish_title">Continuation of permissions needed to enable Exposure Notifications</string>
  <string name="onboarding_exposure_notifications_title">Turn on Exposure Notifications</string>
  <string name="onboarding_exposure_notifications_description">
    Get notified if you\'ve been near someone who reported having COVID-19.
    \n\nYour phone uses Bluetooth to securely collect and share random IDs with other phones that are nearby.
    \n\nThe date, duration, and signal strength associated with a possible exposure will be used to determine whether you will be notified based on parameters set by your public health authority.
    \n\nYou may receive a notification to share a diagnosis with your health authority if you get an SMS with your test result. <xliff:g id="learn_more" example="Learn more">%1$s</xliff:g>
  </string>
  <string name="onboarding_metrics_title">Help make this app better</string>
  <string name="onboarding_metrics_subtitle">Share app usage &amp; performance data with Google</string>
  <string name="onboarding_metrics_description">
    To help maintain and improve the app, some limited de-identified data about app performance and usage is shared with Google. This data does not identify you. <xliff:g id="learn_more" example="Learn more">%1$s</xliff:g>
  </string>
  <string name="onboarding_confirm_later_title">Keep Exposure Notifications turned off?</string>
  <string name="onboarding_confirm_later_detail">Until Exposure Notifications is turned on, you won’t be notified of possible exposure to COVID-19</string>
  <string name="no_recent_exposure_indicator">No recent exposure</string>
  <string name="no_recent_exposure_checks">As Exposure Notifications checks for exposures, recent checks appear below.</string>
  <string name="exposure_notifications_are_turned_off">Exposure Notifications is turned off</string>
  <string name="turn_on_exposure_notifications_action">Turn on Exposure Notifications</string>
  <string name="exposure_details_status_subtitle">Status</string>
  <string name="exposure_details_status_exposure">Possible COVID-19 exposure</string>
  <string name="exposure_details_date_exposed_subtitle">Date</string>
  <string name="exposure_details_expiring_subtitle">Your latest possible exposure remains on this page for 2 weeks after the date of exposure.</string>
  <string name="exposure_details_learn_more">Learn more</string>
  <string name="exposure_details_new_badge">New</string>
  <string name="possible_exposures_activity_title">Possible exposure</string>
  <string name="exposure_details_explanation_link">See how Exposure Notifications works</string>
  <plurals name="days_from_start_of_exposure">
    <item quantity="one"><xliff:g id="days" example="1">%1$d</xliff:g> day ago</item>
    <item quantity="other"><xliff:g id="days" example="11">%1$d</xliff:g> days ago</item>
  </plurals>
  <string name="test_result_type_confirmed">COVID-19 positive</string>
  <string name="test_result_type_likely">COVID-19 likely</string>
  <string name="test_result_type_negative">COVID-19 negative</string>
  <string name="positive_test_result_status_shared">Shared</string>
  <string name="positive_test_result_status_not_shared">Not shared</string>
  <string name="notify_turn_on_exposure_notifications_header">To get notified of possible COVID-19 exposure, turn on Exposure Notifications. <xliff:g id="using_en_helps_even_if_vaccinated" example="Using this service helps you protect your community - even if you've been vaccinated.">%1$s</xliff:g></string>
  <string name="using_en_helps_even_if_vaccinated">Using this service helps you protect your community - even if you\'ve been vaccinated.</string>
  <string name="share_begin_title">Help protect your community</string>
  <string name="share_close_title">Close without sharing?</string>
  <string name="share_close_detail">The best way you can help your community is to share your results as soon as possible. If you do close now without sharing, you can pick up where you left off if you change your mind later.</string>
  <string name="btn_resume_later">Yes, close</string>
  <string name="verify_test_result_title">Enter your verification code</string>
  <string name="enter_your_test_identifier">Verification code</string>
  <string name="share_test_identifier_help">This one-time code is used to verify your test result.</string>
  <string name="share_test_identifier_verified">Code verified</string>
  <string name="share_test_identifier_link">Learn more at <xliff:g id="health_authority_url" example="covid19.heartland.com">%1$s</xliff:g></string>
  <string name="share_onset_title">Have you had symptoms?</string>
  <string name="share_onset_subtitle">Helps the health authority determine when you may have been infectious and notify the right people of possible exposure.</string>
  <string name="test_date_label">Date symptoms started</string>
  <string name="share_onset_symptoms">Yes</string>
  <string name="share_onset_no_symptoms">No</string>
  <string name="share_onset_no_answer">I prefer not to answer</string>
  <string name="share_travel_title">Have you traveled in the last 14 days\?</string>
  <string name="share_travel_confirmed">Yes</string>
  <string name="share_travel_no_travel">No</string>
  <string name="share_travel_no_answer">I prefer not to answer</string>
  <string name="share_review_title">Review your information</string>
  <string name="share_review_status_subtitle">COVID-19 status</string>
  <string name="share_review_status_confirmed">Positive</string>
  <string name="share_review_status_likely">Likely</string>
  <string name="share_review_status_negative">Negative</string>
  <string name="share_review_onset_subtitle">Symptoms</string>
  <string name="share_review_onset_date">Started <xliff:g id="date" example="Jun 21, 2020">%1$s</xliff:g></string>
  <string name="share_review_onset_no_symptoms">No symptoms</string>
  <string name="share_review_onset_no_answer">Not answered</string>
  <string name="share_review_travel_subtitle">Travel</string>
  <string name="share_review_travel_confirmed">Within the past 14 days</string>
  <string name="share_review_travel_no_travel">Not traveled in last 14 days</string>
  <string name="share_review_travel_no_answer">Not answered</string>
  <string name="share_confirm_title">Thank you for sharing your COVID-19 result</string>
  <string name="not_shared_confirm_title">Your test result wasn\'t shared</string>
  <string name="not_shared_confirm_detail">Your COVID-19 test result wasn\'t shared. Please try again.</string>
  <string name="status_shared_detail_title">Shared COVID-19 status</string>
  <string name="delete_test_result_title">Delete your test result?</string>
  <string name="delete_test_result_confirmed">Test result deleted</string>
  <string name="share_error_no_internet">Can\’t share test results offline. Check your internet connection &amp; try again.</string>
  <string name="share_vaccination_title">Have you been vaccinated against Covid-19\?</string>
  <string name="share_vaccination_description">You can help even more. Without sharing your identity, you can help <xliff:g id="pha" example="Sample Health Authority">%1$s</xliff:g> better understand the spread of Covid-19 by sharing if you\'ve been vaccinated. <xliff:g id="pha" example="Sample Health Authority">%1$s</xliff:g> receives this data in aggregate form to protect your privacy.</string>
  <string name="share_vaccination_learn_more">Learn more</string>
  <string name="share_vaccination_vaccinated">Yes, I\'ve been vaccinated</string>
  <string name="share_vaccination_not_vaccinated">No</string>
  <string name="share_vaccination_unknown">I prefer not to answer</string>
  <string name="do_you_have_code_title">Did you receive a code?</string>
  <string name="do_you_have_code_content">If you test positive for COVID-19, your health authority usually provides a verification code by phone or text so that you can share your results.</string>
  <string name="btn_i_have_code">Yes, I have a code</string>
  <string name="btn_i_need_code">I need a code</string>
  <string name="get_verification_code_title">Get a verification code</string>
  <string name="phone_number_prompt">Phone number</string>
  <string name="phone_number_help">A verification code allows you to share your test results. Your code will be sent to the number you provide.</string>
  <string name="phone_number_may_be_stored_help">To prevent people from submitting more than one result, your phone number may be temporarily stored by your public health authority.</string>
  <string name="test_date_prompt">Test date</string>
  <string name="test_date_help">Test date should be within the past 14 days.</string>
  <string name="tested_for_covid_checkbox_text">I have received a positive COVID-19 test in the past 14 days.</string>
  <string name="btn_send_code">Send code</string>
  <string name="enter_code_help">Enter the code sent to you by <xliff:g id="health_authority" example="Sample Health Authority">%1$s</xliff:g>.</string>
  <string name="exposure_notifications_are_inactive">Exposure Notifications is inactive</string>
  <string name="device_settings">Device settings</string>
  <string name="manage_storage">Manage storage</string>
  <string name="location_off_warning">Turn on your device\'s location setting to get notified of possible exposure to COVID-19.</string>
  <string name="ble_off_warning">Turn on Bluetooth to get notified of possible exposure to COVID-19.</string>
  <string name="location_ble_off_warning">To get notified of possible exposure to COVID-19, turn on Bluetooth &amp; your device\'s location setting.</string>
  <string name="storage_low_warning">Free up storage on your phone to get notified of possible exposure to COVID-19.</string>
  <string name="share_diagnosis_progress_tracker">Step <xliff:g id="current_step" example="1">%1$d</xliff:g> of <xliff:g id="total_number_of_steps" example="2">%2$d</xliff:g></string>
</resources>