<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_large"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/padding_extra_large"
      android:textAppearance="?attr/textAppearanceHeadline5"
      android:text="@string/exposure_notifications_are_turned_off"
      android:gravity="center" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/padding_normal"
      android:textAppearance="?attr/textAppearanceBody1"
      android:text="@string/notify_turn_on_exposure_notifications_header"
      android:textColor="?attr/colorControlNormal"
      android:gravity="center" />

    <Button
      android:id="@+id/start_api_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/turn_on_exposure_notifications_action"
      android:layout_gravity="center_horizontal"
      style="?attr/materialButtonOutlinedStyle" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/padding_normal"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceHeadline5"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/exposure_notifications_are_inactive"
      android:gravity="center" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceBody1"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/ble_off_warning"
      android:textColor="?attr/colorControlNormal"
      android:gravity="center" />

    <Button
      android:id="@+id/ble_settings_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/device_settings"
      android:layout_gravity="center_horizontal"
      style="?attr/materialButtonOutlinedStyle" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_normal"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceHeadline5"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/exposure_notifications_are_inactive"
      android:gravity="center" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceBody1"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/location_off_warning"
      android:textColor="?attr/colorControlNormal"
      android:gravity="center" />

    <Button
      android:id="@+id/location_settings_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/device_settings"
      android:layout_gravity="center_horizontal"
      style="?attr/materialButtonOutlinedStyle" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_normal"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceHeadline5"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/exposure_notifications_are_inactive"
      android:gravity="center" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceBody1"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/location_ble_off_warning"
      android:textColor="?attr/colorControlNormal"
      android:gravity="center" />

    <Button
      android:id="@+id/location_ble_settings_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/device_settings"
      android:layout_gravity="center_horizontal"
      style="?attr/materialButtonOutlinedStyle" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_normal"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceHeadline5"
      android:layout_marginBottom="@dimen/padding_normal"
      android:text="@string/exposure_notifications_are_inactive"
      android:gravity="center" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceBody1"
      android:text="@string/storage_low_warning"
      android:textColor="?attr/colorControlNormal"
      android:gravity="center" />

    <Button
      android:id="@+id/manage_storage_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/padding_normal"
      android:text="@string/manage_storage"
      android:layout_gravity="center_horizontal"
      style="?attr/materialButtonOutlinedStyle" />

  </LinearLayout>

</merge>