<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:accessibilityPaneTitle="@string/share_onset_title">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <ImageButton
      android:id="@android:id/home"
      style="?attr/borderlessButtonStyle"
      android:layout_width="?attr/actionBarSize"
      android:layout_height="match_parent"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/btn_close_label"
      app:srcCompat="@drawable/ic_close" />

  </LinearLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:isScrollContainer="false"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingHorizontal="@dimen/padding_large">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/padding_extra_large"
        android:text="@string/share_onset_title"
        android:textAppearance="?attr/textAppearanceHeadline5" />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:text="@string/share_onset_subtitle" />

      <RadioGroup
        android:id="@+id/has_symptoms_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_normal"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
          android:id="@+id/has_symptoms_yes"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share_onset_symptoms" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/padding_large">

          <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_date_label"
            android:textColorHint="?android:attr/textColorPrimary">

            <com.google.android.apps.exposurenotification.common.ui.NoAutofillTextInputEditText
              android:id="@+id/share_test_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="@dimen/touch_area_min_size"
              android:cursorVisible="false"
              android:focusable="false"
              android:importantForAutofill="no"
              android:inputType="none"
              tools:ignore="TextFields" />

          </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.radiobutton.MaterialRadioButton
          android:id="@+id/has_symptoms_no"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share_onset_no_symptoms" />

        <com.google.android.material.radiobutton.MaterialRadioButton
          android:id="@+id/has_symptoms_withheld"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share_onset_no_answer" />

      </RadioGroup>

      <include layout="@layout/horizontal_divider" />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_marginVertical="@dimen/padding_normal"
        android:text="@string/enx_symptomsOnsetDescription" />

    </LinearLayout>

  </ScrollView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/padding_normal"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical">

      <Button
        android:id="@+id/share_previous_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_normal"
        android:text="@string/btn_previous" />

    </LinearLayout>

    <FrameLayout
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical">

      <Button
        android:id="@+id/share_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_normal"
        android:text="@string/btn_continue"
        android:layout_gravity="end"/>

    </FrameLayout>

  </LinearLayout>

</LinearLayout>
